@@ -240,8 +240,8 @@ ULONG APIENTRY InitializeKernel32()
 {
     HMODULE hModule;
 
-    DosQueryModuleHandle("WGSS50", &hModule);
-    O32__DLL_InitTerm(hModule, 0);
+//    DosQueryModuleHandle("WGSS50", &hModule);
+//    O32__DLL_InitTerm(hModule, 0);
     DosQueryModuleHandle("KERNEL32", &hModule);
     return inittermKernel32(hModule, 0);
 }
